fix overflowing mathjax on mobile.

--- a/styles.css
+++ b/styles.css
@@ -287,3 +287,9 @@ header {
 .form td {
     padding: 0 0.2em 0.2em 0;
 }
+
+mjx-container[display="true"] {
+    overflow-x: auto;
+    overflow-y: hidden;
+    min-width: 100% !important; 
+}
